verificação do hero

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Olá</h1>
-    <section class="hero"></section>
+    <section class="hero">Aqui vai o hero</section>
 </body>
 </html>
