--- a/index.html
+++ b/index.html
@@ -7,12 +7,28 @@
     <title>Clone Disney Plus</title>
 </head>
 <body>
-    <h1>Olá</h1>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images/disneyplus.svg" alt="">
+            </h1>
+            <ul class="header__links">
+                <li class="header__links__item">
+                    <a href="#" class="button button--secondary">Assine Agora</a>
+                </li>
+
+                <li class="header__links__item">
+                    <a href="#" class="button button--dark">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+
     <section class="hero">
         <div class="hero__content">
-          <h1 class="hero__content_branding">
+          <div class="hero__content_branding">
             <img src="./dist/images/disneyplus.svg" alt="Disney+">
-          </h1>
+          </div>
 
           <h3 class="title--small">
             As melhores história em um só lugar.
@@ -153,7 +169,7 @@
                 </li>
 
                 <li class="plans__list__item">
-                    <img src="./dist/images/logos/disney_star_plus_sm.png" alt="Disney PLus">
+                    <img src="./dist/images/logos/disney_star_plus_sm.png" alt="Disney Plus">
                     <strong class="title--small">R$ 45,90/mês</strong>
                     <p class="text--big">
                         Assine Disney+ e Star+ juntos. Economize e aproveite agora os dois serviços por um preço único.
@@ -165,7 +181,7 @@
                     <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png" alt="Disney PLus">
                     <strong class="title--small">R$ 59,90/mês</strong>
                     <p class="text--big">
-                        Assine Disney+ e Star+ e STARZPLAY em um plano especial. Assine agora os três serviços juntos.
+                        Assine Disney+ e Star+ e STARZPLAY em um plano especial. Assine agora os três serviços.
                     </p>
                     <button class="button">Assine Agora</button>
                 </li>
@@ -175,6 +191,181 @@
                 O preço pode variar casp a assinatura seja feita através de outras plataformas
             </p>
     </section>
+
+    <section class="image-text-section">
+        <img src="./dist/images/tv_pc_tablet_celular.png" alt="Imagem com Tv, computador, tablet e celular">
+        <div class="image-text-section__text_container">
+            <h2 class="title">Assista do seu jeito!</h2>
+            <p class="text--big">
+                Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de títulos em 4K não para de crescer. Além disso, para a felicidade de todos, é possível assistir em até 4 telas ao mesmo tempo.
+            </p>
+        </div>
+    </section>
+
+    <section class="image-text-section image-text-section--image-full-width">
+        <img src="./dist/images/fundo_rei_leao.png" alt="Fundo rei Leão">
+        <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
+            <h2 class="title">Baixe filmes e séries!</h2>
+            <p class="text--big">
+                Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.
+            </p>
+        </div>
+    </section>
+
+    <section class="available-devices">
+        <h2 class="title">Disponível nos seus dispostivos favoritos</h2>
+        <ul class="available-devices__list">
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Chrome OS</li>
+                    <li>MacOS</li>
+                    <li>PC Windows</li>
+                </ul>
+            </li>
+
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/tv.png" alt="Computador">
+                <h4 class="title--small">TV</h4>
+                <ul class="text">
+                    <li>Amazon Fire TV</li>
+                    <li>Android TV</li>
+                    <li>Apple TV</li>
+                    <li>Chromecast</li>
+                    <li>TVs LG</li>
+                    <li>Roku</li>
+                    <li>Samsung</li>
+                </ul>
+            </li>
+
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/videogames.png" alt="Computador">
+                <h4 class="title--small">Videogames</h4>
+                <ul class="text">
+                    <li>PS4</li>
+                    <li>PS5</li>
+                    <li>Xbox One</li>
+                    <li>Xbox Series X</li>
+                    <li>Xbox Series S</li>
+                </ul>
+            </li>
+
+            <li class="available-devices__list__item">
+                <img src="./dist/images/dispositivos/celular.png" alt="Computador">
+                <h4 class="title--small">Computador</h4>
+                <ul class="text">
+                    <li>Tablets Amazon Fire</li>
+                    <li>Celulares e Tablets Android</li>
+                    <li>iPhone e iPad</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section class="faq">
+        <h2 class="title">Perguntas Frequentes</h2>
+        <ul class="faq__questions">
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    O que está incluído no Disney+?
+                </div>
+
+                <div class="faq__questions__item__answer text--big">
+                    <p class="text--big">O Disney+ oferece:</p>
+                    <p>• Experiência premium sem intervalos comerciais.</p>
+                    <p>• As melhores histórias da Disney, Pixar, Marvel, Star Wars, National Geographic, tudo em um só lugar.</p>
+                    <p>• Groupwatch: assista junto com amigos ou famiiares, mesmo separados.</p>
+                    <p>• Downloads ilimitados em até 10 dispositivos compatíveis.</p>
+                    <p>• Mais de 300 títulos em 4K UHD e HDR</p>
+                    <p>• A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</p>
+                    <p>• IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com Disney+.</p>
+                </div>
+            </li>
+
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                </div>
+
+                <div class="faq__questions__item__answer text--big">
+                    A Resposta da pergunta
+                </div>
+            </li>
+
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Quais formas de pagamento posso utilizar?
+                </div>
+
+                <div class="faq__questions__item__answer text--big">
+                    A Resposta da pergunta
+                </div>
+            </li>
+
+            <li class="faq__questions__item">
+                <div class="faq__questions__item__question" data-faq-question>
+                    Como posso ver o conteúdo com classificação indicativa até 16 e 18?
+                </div>
+
+                <div class="faq__questions__item__answer text--big">
+                    A Resposta da pergunta
+                </div>
+            </li>
+        </ul>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="Disney+">
+            <ul class="footer__links">
+
+                <li class="footer__links__item">
+                    <div class="language-selector">
+                        <img src="./dist/images/icones/globe.svg" alt="Globo do mundo">
+                        <select>
+                            <option>English</option>
+                            <option selected>Português</option>
+                        </select>
+                    </div>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Termos e Condições de Uso.</a>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Polítia de Privacidade.</a>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Proteção de Dados no Brasil.</a>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Anúncios personalizados.</a>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Dispositivos compatíveis.</a>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Ajuda.</a>
+                </li>
+
+                <li class="footer__links__item">
+                    <a href="#" class="text--small">Sobre o Disney+.</a>
+                </li>
+            </ul>
+            <p class="text--small">
+                © 2022 Disney, Disney+ e The Walt Disney Comapny. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+            </p>
+
+            <p class="text--small">
+                Disney+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Disney+ é comercializado por The Walt Disney Company (Brasil) Ltda, World Trade Center, Av. Das Nações Unidas, 12.551, 12.555, 12.559, Piso 10, São Paulo/SP - CEP 04578-903, Brasil e CNPJ/M 73.042.962/0004*20 
+            </p>
+        </div>
+    </footer>
     <script src="./src/main.js"></script>
 </body>
 </html>
