ajustes no mobile

--- a/index.html
+++ b/index.html
@@ -80,7 +80,15 @@
       </nav>
       <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
         <li class="shows__list__item ">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/em_breve/desencantada.jpg" alt="Spidey">
+        </li>
+
+        <li class="shows__list__item">
+            <img src="./dist/images/em_breve/lobisomem.jpg" alt="Spidey">
+        </li>
+
+        <li class="shows__list__item">
+            <img src="./dist/images/em_breve/sem_limites.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
@@ -88,19 +96,11 @@
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/em_breve/the_santa_clauses.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
-        </li>
-
-        <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
-        </li>
-
-        <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/em_breve//willow.jpg" alt="Spidey">
         </li>
       </ul>
 
@@ -110,23 +110,23 @@
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_populares/bluey.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_populares/cavaleira_da_lua.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_populares/o_incrivel_dr_pol.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_populares/red.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="Spidey">
         </li>
       </ul>
 
@@ -136,23 +136,23 @@
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_no_star_plus/nba.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_no_star_plus/os_simpson.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_no_star_plus/premier_league.jpg" alt="Spidey">
         </li>
 
         <li class="shows__list__item">
-            <img src="./dist/images/em_breve/spidey.jpg" alt="Spidey">
+            <img src="./dist/images/mais_no_star_plus/the_kardashians.jpg" alt="Spidey">
         </li>
       </ul>
     </section>
@@ -203,7 +203,10 @@
     </section>
 
     <section class="image-text-section image-text-section--image-full-width">
-        <img src="./dist/images/fundo_rei_leao.png" alt="Fundo rei Leão">
+        <picture>
+            <source @media = "(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
+            <img src="./dist/images/fundo_rei_leao.png" alt="Fundo rei Leão">
+        </picture>
         <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
             <h2 class="title">Baixe filmes e séries!</h2>
             <p class="text--big">
