--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </li>
 
             <li class="hero__content__combos__combo">
-                <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ - Star+ - Combo+">
+                <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ - Star+ - Combo+">
                 <button class="button">Assine Agora</button>
                 <span class="text">R$ 45,00/mês*</span>
             </li>
@@ -288,11 +288,11 @@
 
             <li class="faq__questions__item">
                 <div class="faq__questions__item__question" data-faq-question>
-                    Já tem o Disney+ ou o Star+ e quer o Combo+?
+                    Onde posso assistir ao Disney+?
                 </div>
 
                 <div class="faq__questions__item__answer text--big">
-                    A Resposta da pergunta
+                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a lista completa de dispositivos compatíveis na Central de Ajuda.
                 </div>
             </li>
 
@@ -302,17 +302,7 @@
                 </div>
 
                 <div class="faq__questions__item__answer text--big">
-                    A Resposta da pergunta
-                </div>
-            </li>
-
-            <li class="faq__questions__item">
-                <div class="faq__questions__item__question" data-faq-question>
-                    Como posso ver o conteúdo com classificação indicativa até 16 e 18?
-                </div>
-
-                <div class="faq__questions__item__answer text--big">
-                    A Resposta da pergunta
+                    Você pode pagar com cartão de crédito, débito ou Mercado Pago, ou por meio de empresas parceiras, como Mercado Livre e provedores locais de TV, telefone e internet.
                 </div>
             </li>
         </ul>
