--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 </div>
 
                 <div class="faq__questions__item__answer text--big">
-                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a lista completa de dispositivos compatíveis na Central de Ajuda.
+                    OO aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira a lista completa de dispositivos compatíveis na Central de Ajuda.
                 </div>
             </li>
 
